Fix sidebar z-index

--- a/frontend/src/features/toggleSidebar/ui/toggelSidebar.scss
+++ b/frontend/src/features/toggleSidebar/ui/toggelSidebar.scss
@@ -4,7 +4,7 @@
   cursor: pointer;
   -webkit-user-select: none;
   user-select: none;
-  z-index: 10;
+  z-index: 1001;
 
   span {
     display: block;
